--- a/packages/base-numfmt-engine/package.json
+++ b/packages/base-numfmt-engine/package.json
@@ -33,7 +33,8 @@
         "esbuild": "node ./esbuild.config.mjs && tsc -p tsconfig.esbuild.json"
     },
     "dependencies": {
-        "@univerjs/core": "workspace:*"
+        "@univerjs/core": "workspace:*",
+        "numfmt": "^2.5.2"
     },
     "devDependencies": {
         "@types/node": "^20.9.0",
