--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "lint": "eslint --cache packages/**/src/**/*.{tsx,ts}",
         "lint:fix": "eslint packages/**/src/**/*.{tsx,ts} --fix",
         "storybook": "storybook dev -p 6006 --no-open",
-        "build:storybook": "storybook build"
+        "build:storybook": "storybook build",
+        "check:i18n": "node ./scripts/i18n.mjs"
     },
     "engines": {
         "node": "^18.17.0",
         "pnpm": "^8.6.2"
     },
+    "type": "module",
     "author": "DreamNum Inc. <developer@univer.ai>",
     "license": "MIT",
     "devDependencies": {
@@ -42,6 +44,7 @@
         "@typescript-eslint/parser": "^6.10.0",
         "@univerjs/design": "workspace:*",
         "@vitejs/plugin-react": "^4.1.1",
+        "deep-diff": "^1.0.2",
         "esbuild": "^0.19.5",
         "esbuild-plugin-clean": "^1.0.1",
         "esbuild-style-plugin": "^1.6.3",
@@ -60,6 +63,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "storybook": "^7.5.3",
+        "ts-import": "5.0.0-beta.0",
         "ts-node": "^10.9.1",
         "turbo": "^1.10.16",
         "typescript": "^5.2.2"
