--- a/packages/sheets-plugin-numfmt/package.json
+++ b/packages/sheets-plugin-numfmt/package.json
@@ -45,7 +45,8 @@
         "@univerjs/ui-plugin-sheets": "workspace:*",
         "@wendellhu/redi": "^0.12.11",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+         "rxjs": "^7.8.1"
     },
     "devDependencies": {
         "@types/node": "^20.9.0",
